Refactor : 메인 메뉴 Map 생성 방식 변경
java9 문법인 Map.of() 변경 - readonly 객체 목적성 및 에러 여부 확인 완료